@@ -8,6 +8,8 @@ Version 0.2.8 (2011-03-??)
 - Added quantity_requested to product template
 - Fixed issue with email address on checkout
 - Fixed potential product load problem in IsotopeProductCollection
+- Fixed bug with coupons in rules
+- Fixed potential problem with rule product restrictions
 - Removed default list template in tl_content
 
 Version 0.2.7 (2011-03-09)
